--- a/app_pressure/templates/app_pressure/pressure_details.html
+++ b/app_pressure/templates/app_pressure/pressure_details.html
@@ -39,7 +39,7 @@
             </div>
             <div class="uk-card-body">
                 <span> <b>Lp.: </b> </span>
-                <span> 5 </span> <br>
+                <span> {{ number }} </span> <br>
                 <span> <b>Cisnienie Skurczowe: </b> </span>
                 <span>{{ pressure.shrink }}</span><br>
                 <span> <b>Cisnienie Rozkurczowe: </b> </span>
