--- a/app_weight/templates/app_weight/weight_details.html
+++ b/app_weight/templates/app_weight/weight_details.html
@@ -30,7 +30,7 @@
             </div>
             <div class="uk-card-body">
                 <span> <b>Lp.: </b> </span>
-                <span> 5 </span> <br>
+                <span> {{ number }} </span> <br>
                 <span> <b>Waga: </b> </span>
                 <span>{{ weight.weight }}</span><br>
                 <span> <b>Data: </b> </span>
