--- a/app_growth/templates/app_growth/growth_details.html
+++ b/app_growth/templates/app_growth/growth_details.html
@@ -29,7 +29,7 @@
             </div>
             <div class="uk-card-body">
                 <span> <b>Lp.: </b> </span>
-                <span> 5 </span> <br>
+                <span> {{ number }} </span> <br>
                 <span> <b>Wzrost: </b> </span>
                 <span>{{ growth.growth }}</span><br>
                 <span> <b>Data: </b> </span>
