--- a/app_pulse/templates/app_pulse/pulse_details.html
+++ b/app_pulse/templates/app_pulse/pulse_details.html
@@ -29,7 +29,7 @@
             </div>
             <div class="uk-card-body">
                 <span> <b>Lp.: </b> </span>
-                <span> 5 </span> <br>
+                <span> {{ number }} </span> <br>
                 <span> <b>Puls: </b> </span>
                 <span>{{ pulse.pulse }}</span><br>
                 <span> <b>Data: </b> </span>
