start przed admin

--- a/app_weight/templates/app_weight/edit_weight.html
+++ b/app_weight/templates/app_weight/edit_weight.html
@@ -14,6 +14,12 @@
 
         <div style="height: 50px"></div>
         <div class="uk-card uk-card-default uk-border-rounded">
+            <div class="uk-card-header">
+                <div class="uk-width-expand">
+                    <h3 class="uk-card-title uk-position-relative uk-position-top-center">Edycja wpisu</h3>
+                </div>
+            </div>
+
             <div class="uk-card-body">
                 <form style="width:300px; margin: auto" action="" method="POST">
 
