--- a/app_growth/templates/app_growth/all_growths.html
+++ b/app_growth/templates/app_growth/all_growths.html
@@ -90,7 +90,37 @@
     </div>
 
     <a href="add" uk-icon="icon: copy" uk-tooltip="Dodaj"></a>
-    <a href="delete/all" uk-icon="icon: trash" uk-tooltip="Wyczyść"></a>
+    <a href="#model-confirmation-all" uk-toggle uk-icon="icon: trash" uk-tooltip="Wyczyść" style="margin-left: 5px"></a>
+
+    <div id="model-confirmation-all" uk-modal>
+        <div class="uk-modal-dialog">
+            <div class="uk-modal-header">
+                <h3 class="uk-modal-title uk-text-center" style="color: #FF7F50">Alert</h3>
+            </div>
+            <div class="uk-modal-body">
+                <p> Potwierdź wyczyszczenie wszystkich wpisów !</p>
+                <p> Ta czynność jest nie odwracalna.</p>
+            </div>
+            <div class="uk-modal-footer uk-text-center">
+                <a href="/growths/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>
+                <a href="delete/all" uk-icon="check" uk-tooltip="Wyczyść"></a>
+            </div>
+        </div>
+    </div>
+
+    <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
+    <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 5">
+        <form class="uk-search uk-width-1-1">
+            <input name="search" class="uk-search-input" type="search"
+                   placeholder="Wyszukaj po Uwagach, 3-10 znaków." minlength="3" maxlength="10" aria-label="Search"
+                   autofocus>
+        </form>
+    </div>
+    {% if filter_value %}
+        <span style="color: #4169E1; margin-left: 50px">Zastosowany Filtr:</span>
+        <span style="color: #FF7F50"> {{ filter_value }} </span>
+    {% endif %}
+
     <span class="uk-position-relative uk-align-right"> Ilość wpisów: {{ pages_max_elements }} </span>
 
     <table class="uk-table uk-table-striped uk-table-hover uk-table-small" uk-sortable>
