--- a/app_weight/templates/app_weight/all_weights.html
+++ b/app_weight/templates/app_weight/all_weights.html
@@ -12,8 +12,8 @@
             <h2 class="uk-heading-divider" style="position: relative">Waga</h2>
         </div>
 
-        <a uk-icon="info" uk-tooltip="Info" href="#modal-center" uk-toggle></a>
-        <div id="modal-center" class="uk-flex-top" uk-modal>
+        <a uk-icon="info" uk-tooltip="Info" href="#modal-info" uk-toggle></a>
+        <div id="modal-info" class="uk-flex-top" uk-modal>
             <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
                 {#            <button class="uk-modal-close-default" type="button" uk-close></button>#}
                 <p>Całkowita masa ciała jest obliczana na zasadzie zsumowania tłuszczu niezbędnego oraz tłuszczu
@@ -88,7 +88,37 @@
         </div>
 
         <a href="add" uk-icon="icon: copy" uk-tooltip="Dodaj"></a>
-        <a href="delete/all" uk-icon="icon: trash" uk-tooltip="Wyczyść"></a>
+        <a href="#model-confirmation-all" uk-toggle uk-icon="icon: trash" uk-tooltip="Wyczyść" style="margin-left: 5px"></a>
+
+        <div id="model-confirmation-all" uk-modal>
+            <div class="uk-modal-dialog">
+                <div class="uk-modal-header">
+                    <h3 class="uk-modal-title uk-text-center" style="color: #FF7F50">Alert</h3>
+                </div>
+                <div class="uk-modal-body">
+                    <p> Potwierdź wyczyszczenie wszystkich wpisów !</p>
+                    <p> Ta czynność jest nie odwracalna.</p>
+                </div>
+                <div class="uk-modal-footer uk-text-center">
+                    <a href="/weights/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>
+                    <a href="delete/all" uk-icon="check" uk-tooltip="Wyczyść"></a>
+                </div>
+            </div>
+        </div>
+
+        <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
+        <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 5">
+            <form class="uk-search uk-width-1-1">
+                <input name="search" class="uk-search-input" type="search"
+                       placeholder="Wyszukaj po Uwagach, 3-10 znaków." minlength="3" maxlength="10" aria-label="Search"
+                       autofocus>
+            </form>
+        </div>
+        {% if filter_value %}
+            <span style="color: #4169E1; margin-left: 50px">Zastosowany Filtr:</span>
+            <span style="color: #FF7F50"> {{ filter_value }} </span>
+        {% endif %}
+
         <span class="uk-position-relative uk-align-right"> Ilość wpisów: {{ pages_max_elements }} </span>
 
         <table class="uk-table uk-table-striped uk-table-hover uk-table-small" uk-sortable>
@@ -116,9 +146,12 @@
                         {#                <td>{{ value.date}}</td>#}
                         <td>{{ value.comments }}</td>
                         <td>
-                            <a href="{% url 'edit_weight_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
-                            <button href="{% url 'weight_details_url' id=value.id %}" uk-icon="icon: info" uk-tooltip="Szczegóły" type="submit"></button>
-                            <a href="{% url 'delete_weight_url' id=value.id %}" uk-icon="icon: trash" uk-tooltip="Usuń"></a>
+                            <a href="{% url 'edit_weight_url' id=value.id %}" uk-icon="icon: file-edit"
+                               uk-tooltip="Edytuj"></a>
+                            <button href="{% url 'weight_details_url' id=value.id %}" uk-icon="icon: info"
+                                    uk-tooltip="Szczegóły" type="submit"></button>
+                            <a href="{% url 'delete_weight_url' id=value.id %}" uk-icon="icon: trash"
+                               uk-tooltip="Usuń"></a>
                         </td>
                     </form>
                 </tr>
@@ -130,8 +163,8 @@
         <div class="uk-position-center uk-position-relative">
           <span>
              {% if weights.has_previous %}
-                <a href="?page=1" style="color: #00BFFF; margin-right: 20px">&laquo; Pierwsza</a>
-                <a href="?page={{ weights.previous_page_number }}" style="color: #32CD32">Poprzednia </a>
+                 <a href="?page=1" style="color: #00BFFF; margin-right: 20px">&laquo; Pierwsza</a>
+                 <a href="?page={{ weights.previous_page_number }}" style="color: #32CD32">Poprzednia </a>
              {% endif %}
               <span>Strona {{ weights.number }} z {{ weights.paginator.num_pages }}</span>
               {% if weights.has_next %}
@@ -141,7 +174,7 @@
           </span>
         </div>
 
-    <div class="uk-padding"></div>
+        <div class="uk-padding"></div>
 
-</div>
+    </div>
 {% endblock %}
