--- a/app_growth/templates/app_growth/edit_growth.html
+++ b/app_growth/templates/app_growth/edit_growth.html
@@ -35,19 +35,16 @@
                     </div>
 
                     <div class="uk-margin">
-                        <label>Uwagi<span uk-icon="icon: question; ratio: 0.6" uk-tooltip="max 255 znaków" style="margin-left: 10px"></span></label>
-                        <textarea name="comment" class="uk-textarea" rows="4">{{ growth.comments }}</textarea>
+                        <label>Uwagi<span uk-icon="icon: question; ratio: 0.6" uk-tooltip="max 150 znaków" style="margin-left: 10px"></span></label>
+                        <textarea name="comment" class="uk-textarea" rows="5" maxlength="150">{{ growth.comments }}</textarea>
                     </div>
 
                     <div class="uk-position-relative uk-position-center uk-position-top-center" >
-                        <a href="/growths/" class="uk-icon-link uk-margin-small-right" uk-icon="close"
-                           uk-tooltip="Anuluj"></a>
-                        <a href="{% url 'edit_growth_url' id=growth.id %}" class="uk-icon-link uk-margin-small-right" uk-icon="trash"
-                           uk-tooltip="Wyczyść"></a>
-                        <button href="" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit"
-                                uk-tooltip="Zapisz"></button>
-
+                        <a href="/growths/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>
+                        <a href="{% url 'edit_growth_url' id=growth.id %}" class="uk-icon-link uk-margin-small-right" uk-icon="trash" uk-tooltip="Wyczyść"></a>
+                        <button href="" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit" uk-tooltip="Zapisz"></button>
                     </div>
+
                 </form>
             </div>
         </div>
