--- a/app_growth/templates/app_growth/growth_details.html
+++ b/app_growth/templates/app_growth/growth_details.html
@@ -28,6 +28,7 @@
                 </div>
             </div>
             <div class="uk-card-body">
+
                 <span> <b>Lp.: </b> </span>
                 <span> {{ number }} </span> <br>
                 <span> <b>Wzrost: </b> </span>
@@ -35,7 +36,7 @@
                 <span> <b>Data: </b> </span>
                 <span>{{ growth.date }}</span><br>
                 <span> <b>Uwagi: </b> </span>
-                <span>{{ growth.comments }}</span>
+                <span class="uk-text-break">{{ growth.comments }}</span>
                 <br><br>
                 <b>Nasza ocena: </b>
 
