--- a/app_pulse/templates/app_pulse/add_pulse.html
+++ b/app_pulse/templates/app_pulse/add_pulse.html
@@ -31,19 +31,16 @@
                     </div>
 
                     <div class="uk-margin">
-                        <label>Uwagi<span uk-icon="icon: question; ratio: 0.6" uk-tooltip="max 255 znaków" style="margin-left: 10px"></span></label>
-                        <textarea name="comment" class="uk-textarea" rows="4"></textarea>
+                        <label>Uwagi<span uk-icon="icon: question; ratio: 0.6" uk-tooltip="max 150 znaków" style="margin-left: 10px"></span></label>
+                        <textarea name="comment" class="uk-textarea" rows="5" maxlength="150"></textarea>
                     </div>
 
                     <div class="uk-position-relative uk-position-center uk-position-top-center" >
-                        <a href="/pulses/" class="uk-icon-link uk-margin-small-right" uk-icon="close"
-                           uk-tooltip="Anuluj"></a>
-                        <a href="/pulses/add" class="uk-icon-link uk-margin-small-right" uk-icon="trash"
-                           uk-tooltip="Wyczyść"></a>
-                        <button href="" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit"
-                                uk-tooltip="Zapisz"></button>
-
+                        <a href="/pulses/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>
+                        <a href="/pulses/add" class="uk-icon-link uk-margin-small-right" uk-icon="trash" uk-tooltip="Wyczyść"></a>
+                        <button href="" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit" uk-tooltip="Zapisz"></button>
                     </div>
+
                 </form>
             </div>
         </div>
