--- a/app_pulse/templates/app_pulse/pulse_details.html
+++ b/app_pulse/templates/app_pulse/pulse_details.html
@@ -34,7 +34,7 @@
                 <span>{{ pulse.pulse }}</span><br>
                 <span> <b>Data: </b> </span>
                 <span>{{ pulse.date }}</span><br>
-                <span> <b>Uwagi: </b> </span>
+                <span class="uk-text-break"> <b>Uwagi: </b> </span>
                 <span>{{ pulse.comments }}</span>
                 <br><br>
                 <b>Nasza ocena: </b>
