--- a/app_growth/templates/app_growth/all_growths.html
+++ b/app_growth/templates/app_growth/all_growths.html
@@ -109,7 +109,7 @@
     </div>
 
     <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
-    <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 5">
+    <div class="uk-drop" uk-drop="mode: click; pos: right-center; offset: 5">
         <form class="uk-search uk-width-1-1">
             <input name="search" class="uk-search-input" type="search"
                    placeholder="Wyszukaj po Uwagach, 3-10 znaków." minlength="3" maxlength="10" aria-label="Search"
@@ -126,17 +126,17 @@
     <table class="uk-table uk-table-striped uk-table-hover uk-table-small" uk-sortable>
         <thead>
             <tr>
-                <th>Lp.</th>
-                <th>Wzrost</th>
-                <th>Data</th>
-                <th>Uwagi</th>
-                <th>Opcje</th>
+                <th style="width:5%; text-align: center">Lp.</th>
+                <th style="width:7%; text-align: center">Wzrost</th>
+                <th style="width:20%; text-align: center">Data</th>
+                <th style="width:58%; text-align: center">Uwagi</th>
+                <th style="width:10%; text-align: center">Opcje</th>
             </tr>
         </thead>
 
         <tbody>
         {% for value in growths %}
-            <tr>
+            <tr style="text-align: center">
                 <form method="POST" action="{% url 'growth_details_url' id=value.id %}">
                     {% csrf_token %}
                     <td>
@@ -145,7 +145,7 @@
                     </td>
                     <td>{{ value.growth |floatformat:1}}</td>
                     <td>{{ value.date |date:'D, d M Y,'}} {{value.date |time:"H:i"}}</td>
-                    <td>{{ value.comments }}</td>
+                    <td class="uk-text-break">{{ value.comments }}</td>
                     <td>
                         <a href="{% url 'edit_growth_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
                         <button href="{% url 'growth_details_url' id=value.id %}" uk-icon="icon: info" uk-tooltip="Szczegóły" type="submit"></button>
