--- a/app_pressure/templates/app_pressure/all_pressures.html
+++ b/app_pressure/templates/app_pressure/all_pressures.html
@@ -121,7 +121,7 @@
     </div>
 
     <a href uk-icon="icon: search" uk-tooltip="Wyszukaj" style="margin-left: 5px"></a>
-    <div class="uk-drop" uk-drop="mode: click; pos: left-center; offset: 5">
+    <div class="uk-drop" uk-drop="mode: click; pos: right-center; offset: 5">
         <form class="uk-search uk-width-1-1">
             <input name="search" class="uk-search-input" type="search"
                    placeholder="Wyszukaj po Uwagach, 3-10 znaków." minlength="3" maxlength="10" aria-label="Search"
@@ -138,19 +138,19 @@
     <table class="uk-table uk-table-striped uk-table-hover uk-table-small" uk-sortable>
         <thead>
             <tr>
-                <th>Lp.</th>
-                <th>Ciśnienie Skurczowe</th>
-                <th>Ciśnienie Rozkurczowe</th>
-                <th>Tętno</th>
-                <th>Data</th>
-                <th>Uwagi</th>
-                <th>Opcje</th>
+                <th style="width:5%; text-align: center" class="uk-text-middle">Lp.</th>
+                <th style="width:7%; text-align: center" class="uk-text-middle">Ciśnienie Skurczowe</th>
+                <th style="width:7%; text-align: center" class="uk-text-middle">Ciśnienie Rozkurczowe</th>
+                <th style="width:7%; text-align: center" class="uk-text-middle">Tętno</th>
+                <th style="width:20%; text-align: center" class="uk-text-middle">Data</th>
+                <th style="width:44%; text-align: center" class="uk-text-middle">Uwagi</th>
+                <th style="width:10%; text-align: center" class="uk-text-middle">Opcje</th>
             </tr>
         </thead>
 
         <tbody>
         {% for value in pressures %}
-            <tr>
+            <tr style="text-align: center">
                 <form method="POST" action="{% url 'pressure_details_url' id=value.id %}">
                     {% csrf_token %}
                     <td>
@@ -161,7 +161,7 @@
                     <td>{{ value.diastole |floatformat:1}}</td>
                     <td>{{ value.pulse |floatformat:1}}</td>
                     <td>{{ value.date |date:'D, d M Y,'}} {{value.date |time:"H:i"}}</td>
-                    <td>{{ value.comments }}</td>
+                    <td class="uk-text-break">{{ value.comments }}</td>
                     <td>
                         <a href=" {% url 'edit_pressure_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
                         <button href="{% url 'pressure_details_url' id=value.id %}" uk-icon="icon: info" uk-tooltip="Szczegóły" type="submit"></button>
