--- a/app_pressure/templates/app_pressure/pressure_details.html
+++ b/app_pressure/templates/app_pressure/pressure_details.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
             <div class="uk-card-body">
+
                 <span> <b>Lp.: </b> </span>
                 <span> {{ number }} </span> <br>
                 <span> <b>Cisnienie Skurczowe: </b> </span>
@@ -48,7 +49,7 @@
                 <span>{{ pressure.pulse }}</span><br>
                 <span> <b>Data: </b> </span>
                 <span>{{ pressure.date }}</span><br>
-                <span> <b>Uwagi: </b> </span>
+                <span class="uk-text-break"> <b>Uwagi: </b> </span>
                 <span>{{ pressure.comments }}</span>
                 <br><br>
                 <b>Nasza ocena: </b>
