--- a/app_weight/templates/app_weight/edit_weight.html
+++ b/app_weight/templates/app_weight/edit_weight.html
@@ -36,19 +36,16 @@
                     </div>
 
                     <div class="uk-margin">
-                        <label>Uwagi<span uk-icon="icon: question; ratio: 0.6" uk-tooltip="max 255 znaków" style="margin-left: 10px"></span></label>
-                        <textarea name="comment" class="uk-textarea" rows="4">{{ weight.comments }}</textarea>
+                        <label>Uwagi<span uk-icon="icon: question; ratio: 0.6" uk-tooltip="max 150 znaków" style="margin-left: 10px"></span></label>
+                        <textarea name="comment" class="uk-textarea" rows="5" maxlength="150">{{ weight.comments }}</textarea>
                     </div>
 
                     <div class="uk-position-relative uk-position-center uk-position-top-center" >
-                        <a href="/weights/" class="uk-icon-link uk-margin-small-right" uk-icon="close"
-                           uk-tooltip="Anuluj"></a>
-                        <a href="{% url 'edit_weight_url' id=weight.id %}" class="uk-icon-link uk-margin-small-right" uk-icon="trash"
-                           uk-tooltip="Wyczyść"></a>
-                        <button href="" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit"
-                                uk-tooltip="Zapisz"></button>
-
+                        <a href="/weights/" class="uk-icon-link uk-margin-small-right" uk-icon="close" uk-tooltip="Anuluj"></a>
+                        <a href="{% url 'edit_weight_url' id=weight.id %}" class="uk-icon-link uk-margin-small-right" uk-icon="trash" uk-tooltip="Wyczyść"></a>
+                        <button href="" class="uk-icon-link uk-margin-small-right" uk-icon="check" type="submit" uk-tooltip="Zapisz"></button>
                     </div>
+
                 </form>
             </div>
         </div>
