--- a/app_weight/templates/app_weight/weight_details.html
+++ b/app_weight/templates/app_weight/weight_details.html
@@ -30,6 +30,7 @@
                 </div>
             </div>
             <div class="uk-card-body">
+
                 <span> <b>Lp.: </b> </span>
                 <span> {{ number }} </span> <br>
                 <span> <b>Waga: </b> </span>
@@ -37,7 +38,7 @@
                 <span> <b>Data: </b> </span>
                 <span>{{ weight.date }}</span><br>
                 <span> <b>Uwagi: </b> </span>
-                <span>{{ weight.comments }}</span>
+                <span class="uk-text-break">{{ weight.comments }}</span>
                 <br><br>
                 <b>Nasza ocena: </b>
 
@@ -53,8 +54,7 @@
 
             </div>
             <div class="uk-card-footer">
-                <a href="/weights"
-                   class="uk-button uk-button-text uk-position-relative uk-position-top-center">Zamknij</a>
+                <a href="/weights" class="uk-button uk-button-text uk-position-relative uk-position-top-center">Zamknij</a>
             </div>
         </div>
 
