--- a/app_weight/templates/app_weight/all_weights.html
+++ b/app_weight/templates/app_weight/all_weights.html
@@ -146,15 +146,12 @@
                         {#                <td>{{ value.date}}</td>#}
                         <td class="uk-text-break">{{ value.comments }}</td>
                         <td>
-                            <div>
                             <a href="{% url 'edit_weight_url' id=value.id %}" uk-icon="icon: file-edit" uk-tooltip="Edytuj"></a>
                             <button href="{% url 'weight_details_url' id=value.id %}" uk-icon="icon: info" uk-tooltip="Szczegóły" type="submit"></button>
                             <a href="" uk-icon="icon: trash" uk-tooltip="Usuń"></a>
-                            <div class="uk-drop" uk-drop="mode: click; pos: right-center; offset: 5" >
-                              <div class="uk-position-center-left" >
-                                  <a href="{% url 'delete_weight_url' id=value.id %}" uk-icon="check" uk-tooltip="Potwierdź" ></a>
-                              </div>
-                            </div>
+                            <div class="uk-card uk-card-small uk-width-small uk-card-body uk-card-default uk-border-circle uk-box-shadow-medium" uk-drop="mode: click">
+                                <p>Czy jesteś pewien? </p>
+                                <a href="{% url 'delete_weight_url' id=value.id %}" uk-icon="check" uk-tooltip="Potwierdź" style="color: #FF7F50"></a>
                             </div>
                         </td>
                     </form>
