logowanie do platformy

--- a/app_users/templates/password_reset_done.html
+++ b/app_users/templates/password_reset_done.html
@@ -5,7 +5,6 @@
 
 <head>
     <meta charset="UTF-8">
-    {#    <title>Dzienniczek Zdrowia - {% block page_title %}{% endblock %}</title>#}
     <title>Dzienniczek Zdrowia</title>
 
     <link rel="icon" type="image/x-icon" href="{% static 'icon.ico' %}">
@@ -28,7 +27,12 @@
 
     <img class="uk-align-center uk-margin-remove-adjacent uk-border-rounded" src="{% static 'background.JPG' %}"
          width="300" height="140">
-    <h2 class="uk-text-center uk-card-title">Error 404</h2>
+    <h2 class="uk-text-center uk-card-title">Przepraszamy usługa tymczasowo wyłączona</h2>
+
+    <a href="login/">
+        <button class="uk-button uk-button-danger uk-width-1-1 uk-border-rounded" style="margin-top: 10px">Wyjdź
+        </button>
+    </a>
 </div>
 </body>
 
