--- a/templates/fragments/menu.html
+++ b/templates/fragments/menu.html
@@ -1,6 +1,6 @@
 <nav class="uk-navbar-container" uk-navbar uk-sticky>
     <div class="uk-navbar-center nav-overlay">
-
+    
         <span class="uk-navbar-item" uk-icon="icon: user; ratio: 1" uk-tooltip="Użytkownik"></span>
         <a href="{% url 'home_url' %}" class="uk-navbar-item uk-logo" style="margin-right: 100px">
             {% if user.is_authenticated %}
@@ -9,7 +9,7 @@
                 Gość
             {% endif %}
         </a>
-
+    
         <ul class="uk-navbar-nav">
             <li class="uk-parent"><a href="/growths/">Wzrost</a></li>
             <li class="uk-parent"><a href="/weights">Waga</a></li>
@@ -25,33 +25,28 @@
                 </div>
             </li>
         </ul>
-
-        <div class="uk-navbar-item uk-navbar-item" style="margin-left: 90px">
-            <div class="uk-inline">
-                <span class="" uk-icon="icon: unlock; ratio: 1"></span>
-                <span style="margin-left: 5px">
-                {% if user.is_authenticated %}
-                    {% if user.is_superuser %}
-                        Administrator
-                    {% else %}
-                        Użytkownik
-                    {% endif %}
+    
+        <span class="uk-navbar-item" style="margin-left: 100px">
+            {% if user.is_authenticated %}
+                {% if user.is_superuser %}
+                    Administrator
                 {% else %}
-                    Gość
-                {% endif %}            
-                </span>
-            </div>
-        </div>
+                    Użytkownik
+                {% endif %}
+            {% else %}
+                Gość
+            {% endif %}            
+        </span>
     
         <span class="uk-navbar-item">{% now "D, d M Y" %}</span>
-
+    
         {% if user.is_authenticated %}
             <form method="POST" action="{% url 'logout' %}">
                 {% csrf_token %}
                 <button href="/" uk-icon="icon: sign-out; ratio: 1.1" uk-tooltip="Wyloguj"></button>
             </form>
-        {% endif %}
-
+     {% endif %}
+    
     </div>
 </nav>
 
